gclb/nginx/nginx-service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
#    service.alpha.kubernetes.io/app-protocols: '{"my-https-port":"HTTPS"}'
    cloud.google.com/load-balancer-type: "Internal"
  name: my-nginx-internal
  labels:
    run: my-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
    name: my-https-port
  selector:
    run: my-nginx
